--- a/index.html
+++ b/index.html
@@ -94,12 +94,14 @@
                         <a class="nav-link me-lg-3" href="#page-top">HOME</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#knowledge-reserve">KNOWLEDGE RESERVE</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
                     </li>
-
                 </ul>
             </div>
         </div>
@@ -135,30 +137,38 @@
     </section>
     <!-- Home -->
 
+    <!-- Knowledge Reserve -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="knowledge-reserve">
+        <div class="container px-5">
+            <header>
+                <h2 id="knowledge-reserve-subtitle"><i class="bi bi-journal-bookmark-fill"></i>&nbsp;KNOWLEDGE RESERVE</h2>
+            </header>
+            <div class="main-body" id="knowledge-reserve-md"></div>
+        </div>
+    </section>
+    <!-- Knowledge Reserve -->
+
     <!-- Publications -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="publications">
         <div class="container px-5">
             <header>
                 <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;PUBLICATIONS</h2>
             </header>
             <div class="main-body" id="publications-md"></div>
-
         </div>
     </section>
     <!-- Publications  -->
 
     <!-- Awards -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
+    <section class="bg-gradient-primary-to-secondary-gary mt5 md5" id="awards">
         <div class="container px-5">
             <header>
                 <h2 id="awards-subtitle"><i class="bi bi-award-fill"></i>AWARDS </h2>
             </header>
             <div class="main-body" id="awards-md"></div>
-
         </div>
     </section>
     <!-- Awards -->
-
 
     <!-- Footer-->
     <footer class="bg-bottom text-center py-5">
