--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
     <!-- Home -->
 
     <!-- Knowledge Reserve -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="knowledge-reserve">
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="knowledge-reserve">
         <div class="container px-5">
             <header>
-                <h2 id="knowledge-reserve-subtitle"><i class="bi bi-journal-bookmark-fill"></i>&nbsp;KNOWLEDGE RESERVE</h2>
+                <h2 id="knowledge-subtitle"><i class="bi bi-journal-bookmark-fill"></i>&nbsp;KNOWLEDGE RESERVE</h2>
             </header>
             <div class="main-body" id="knowledge-reserve-md"></div>
         </div>
