--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <a class="nav-link me-lg-3" href="#page-top">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#knowledge-reserve">KNOWLEDGE RESERVE</a>
+                        <a class="nav-link me-lg-3" href="#knowledge">KNOWLEDGE</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
@@ -138,12 +138,12 @@
     <!-- Home -->
 
     <!-- Knowledge Reserve -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="knowledge-reserve">
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="knowledge">
         <div class="container px-5">
             <header>
                 <h2 id="knowledge-subtitle"><i class="bi bi-journal-bookmark-fill"></i>&nbsp;KNOWLEDGE RESERVE</h2>
             </header>
-            <div class="main-body" id="knowledge-reserve-md"></div>
+            <div class="main-body" id="knowledge-md"></div>
         </div>
     </section>
     <!-- Knowledge Reserve -->
