--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="knowledge">
         <div class="container px-5">
             <header>
-                <h2 id="knowledge-subtitle"><i class="bi bi-journal-bookmark-fill"></i>&nbsp;KNOWLEDGE RESERVE</h2>
+                <h2 id="knowledge-subtitle"><i class="bi bi-journal-bookmark-fill"></i>&nbsp;KNOWLEDGE</h2>
             </header>
             <div class="main-body" id="knowledge-md"></div>
         </div>
